--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdt",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Blued Developer Tools ",
   "main": "index.js",
   "scripts": {
@@ -29,6 +29,8 @@
     "eslint-plugin-standard": "^1.3.2"
   },
   "dependencies": {
-    "commander": "^2.9.0"
+    "chalk": "^1.1.3",
+    "commander": "^2.9.0",
+    "moment": "^2.13.0"
   }
 }
