--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "bdt",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Blued Developer Tools ",
+  "preferGlobal": true,
   "main": "index.js",
   "scripts": {
     "test": "npm test"
@@ -32,5 +33,8 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "moment": "^2.13.0"
+  },
+  "engines": {
+    "node": ">=4.0.0"
   }
 }
