--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,3 @@
 {
-  "extends": "standard",
-  "env": {
-    "mocha": true,
-    "node": true
-  },
-  "rules": {
-    "arrow-parens": [2, "as-needed"]
-  }
+  "extends": "standard"
 }
