--- a/package.json
+++ b/package.json
@@ -1,61 +1,38 @@
 {
-  "name": "vue-cli",
-  "version": "2.1.0",
-  "description": "A simple CLI for scaffolding Vue.js projects.",
+  "name": "bdt",
+  "version": "0.0.2",
+  "description": "Blued Developer Tools ",
   "preferGlobal": true,
+  "main": "index.js",
+  "scripts": {
+    "test": "npm test"
+  },
   "bin": {
-    "vue": "bin/vue"
+    "bdt": "bin/bdt"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vuejs/vue-cli.git"
+    "url": "git+https://github.com/bluedapp/bdt.git"
   },
   "keywords": [
-    "vue",
-    "cli",
-    "spa"
+    "blued"
   ],
-  "author": "Evan You",
+  "author": "mdemo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/vuejs/vue-cli/issues"
+    "url": "https://github.com/bluedapp/bdt/issues"
   },
-  "homepage": "https://github.com/vuejs/vue-cli#readme",
-  "main": "lib/index.js",
-  "scripts": {
-    "test": "npm run lint && npm run e2e",
-    "lint": "eslint test/test.js lib bin/* --env mocha",
-    "e2e": "rimraf test/e2e/mock-template-build/*.* && cross-env BABEL_ENV=development mocha test/e2e/test.js --slow 1000 --compilers js:babel-core/register"
+  "homepage": "https://github.com/bluedapp/bdt#readme",
+  "devDependencies": {
+    "eslint": "^2.9.0",
+    "eslint-config-standard": "^5.3.1",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2"
   },
   "dependencies": {
-    "async": "^2.0.0-rc.2",
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "consolidate": "^0.14.0",
-    "download-git-repo": "^0.1.1",
-    "handlebars": "^4.0.5",
-    "inquirer": "^0.12.0",
-    "metalsmith": "^2.1.0",
-    "minimatch": "^3.0.0",
-    "ora": "^0.2.1",
-    "read-metadata": "^1.0.0",
-    "request": "^2.67.0",
-    "rimraf": "^2.5.0",
-    "semver": "^5.1.0",
-    "uid": "0.0.2",
-    "validate-npm-package-name": "^2.2.2"
-  },
-  "devDependencies": {
-    "babel-core": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-2": "^6.5.0",
-    "chai": "^3.5.0",
-    "cross-env": "^1.0.7",
-    "eslint": "^2.7.0",
-    "eslint-config-standard": "^5.1.0",
-    "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-standard": "^1.3.2",
-    "mocha": "^2.4.5"
+    "moment": "^2.13.0"
   },
   "engines": {
     "node": ">=4.0.0"
