--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
-    "moment": "^2.13.0"
+    "generator-bae": "0.0.4",
+    "moment": "^2.13.0",
+    "yeoman-environment": "^1.6.1"
   },
   "engines": {
     "node": ">=4.0.0"
