--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bdt",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "Blued Developer Tools ",
   "preferGlobal": true,
   "main": "index.js",
@@ -34,6 +34,7 @@
     "commander": "^2.9.0",
     "generator-bae": "0.2.6",
     "moment": "^2.13.0",
+    "open": "0.0.5",
     "yeoman-environment": "^1.6.1"
   },
   "engines": {
